# Mathsimd

./: .gitignore  CMakeLists.txt  main.cpp  src.cpp
docker/: Dockerfile
include/: array.hpp  bool.hpp  chunker.hpp  constants.hpp  float2.hpp  float3.hpp  float4.hpp  float4x4.hpp  mathematics.hpp  mathsimd.hpp  matrix_base.hpp  operations.hpp  random.hpp  tensor_base.hpp  tests.hpp  utility.hpp  vector.hpp  vector_operations.hpp
include/policies/: M128.hpp  helper.hpp  normal.hpp  register_policy.hpp  simd.hpp
include/policies/M128/: binary.hpp  comparison.hpp  copier.hpp  recursion.hpp  register_io.hpp  unary.hpp
include/seq/: float3.hpp
include/simd/: float3.hpp
src/: tests.cpp
src/seq/: float3.cpp
src/simd/: float3.cpp
tests/: tests.cpp  tests.hpp
